<resources>
    <string name="app_name">UserInterface</string>
    <string name="textView1">This is a text view</string>
    <string name="button_click_me">Click me</string>
    <string name="button_below">Below</string>
    <string name="to">To</string>
    <string name="message">Message</string>
    <string name="send">send</string>
    <string name="edit">Please type here</string>
    <string name="email">Enter email address</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="milk">milk</string>
    <string name="sugar">sugar</string>
    <string name="caveman">caveman</string>
    <string name="astronaut">astronaut</string>
    <string name="starbuzz_logo">starbuzz_logo</string>
    <string name="message_thanks">Thanks for choosing out awesome blend tea. How do you want it serving?</string>
    <string name="cold">Cold</string>
    <string name="hot">Hot</string>
    <string name="temperature">Temperature</string>
    <string name="lemon">Lemon</string>
    <string-array name="spinner_entries">
        <item>light</item>
        <item>amber</item>
        <item>brown</item>
        <item>dark</item>
    </string-array>
</resources>
